--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -418,7 +418,7 @@ jobs:
 
   image-build:
     name: Build Image
-    needs: prepare
+    needs: pre-steps
     if: ${{ !cancelled() }}
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-build-arm64 || inputs.runner-build-default }}
     strategy:
