--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -375,6 +375,10 @@ jobs:
             type=ref,event=pr
             ${{ inputs.meta-tags }}
 
+      - name: Show image build matrix
+        shell: bash
+        run: echo "${{ steps.prepare_image.outputs.matrix }}"
+
       - name: Run prepare command
         if: inputs.prepare-command != ''
         id: prepare_command
@@ -418,7 +422,7 @@ jobs:
 
   image-build:
     name: Build Image
-    needs: prepare
+    needs: pre-steps
     if: ${{ !cancelled() }}
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-build-arm64 || inputs.runner-build-default }}
     strategy:
