--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -433,7 +433,7 @@ jobs:
   image-build:
     name: Build Image
     needs: pre-steps
-    if: ${{ !cancelled() }}
+    if: ${{ !cancelled() && needs.prepare.outputs.image-build-matrix != '' && toJson(fromJson(needs.prepare.outputs.image-build-matrix)) != '[]' }}
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-build-arm64 || inputs.runner-build-default }}
     strategy:
       matrix:
