--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -266,7 +266,7 @@ jobs:
       version: ${{ steps.set_version.outputs.version }}
       pre-step-matrix: ${{ steps.set_pre_matrix.outputs.matrix }}
       post-step-matrix: ${{ steps.set_post_matrix.outputs.matrix }}
-      image-build-matrix: ${{ steps.prepare_image.outputs.matrix }}
+      image-platform-matrix: ${{ steps.prepare_image.outputs.matrix }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -431,16 +431,16 @@ jobs:
 
       - name: Show Image Build Matrix
         shell: bash
-        run: echo "${{ needs.prepare.outputs.image-build-matrix }}"
+        run: echo "${{ needs.prepare.outputs.image-platform-matrix }}"
 
   image-build:
     name: Build Image
     needs: pre-steps
-    if: ${{ !cancelled() && needs.prepare.outputs.image-build-matrix != '' && toJson(fromJson(needs.prepare.outputs.image-build-matrix)) != '[]' }}
+    if: ${{ needs.prepare.outputs.image-platform-matrix != '' && toJson(fromJson(needs.prepare.outputs.image-platform-matrix)) != '[]' }}
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-build-arm64 || inputs.runner-build-default }}
     strategy:
       matrix:
-        platform: ${{ fromJson(needs.prepare.outputs.image-build-matrix) }}
+        platform: ${{ fromJson(needs.prepare.outputs.image-platform-matrix) }}
     steps:
       - name: Download updated source
         uses: eviden-actions/download-artifact@v2
