--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -397,7 +397,7 @@ jobs:
   pre-steps:
     name: Pre-Build Steps
     needs: prepare
-    if: ${{ needs.prepare.outputs.pre-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.pre-step-matrix)) != '[]' }}
+    if: ${{ !cancelled() && needs.prepare.outputs.pre-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.pre-step-matrix)) != '[]' }}
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
@@ -438,7 +438,7 @@ jobs:
     needs:
       - prepare
       - pre-steps
-    if: ${{ needs.prepare.outputs.image-platform-matrix != '' && toJson(fromJson(needs.prepare.outputs.image-platform-matrix)) != '[]' }}
+    if: ${{ !cancelled() && needs.prepare.outputs.image-platform-matrix != '' && toJson(fromJson(needs.prepare.outputs.image-platform-matrix)) != '[]' }}
     runs-on: ${{ matrix.platform == 'linux/arm64' && inputs.runner-build-arm64 || inputs.runner-build-default }}
     strategy:
       matrix:
@@ -475,8 +475,10 @@ jobs:
 
   post-steps:
     name: Post-Build Steps
-    needs: image-merge
-    if: ${{ needs.prepare.outputs.post-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.post-step-matrix)) != '[]' }}
+    needs:
+      - prepare
+      - image-merge
+    if: ${{ !cancelled() && needs.prepare.outputs.post-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.post-step-matrix)) != '[]' }}
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
