--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -20,5 +20,7 @@ jobs:
       registry-image: ''
       bake-target: build
       registry-username: ${{ github.actor }}
+      lint-command: ls
+      test-command: ls
     secrets:
       registry-password: ${{ secrets.GITHUB_TOKEN }}
