--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -330,10 +330,11 @@ jobs:
               --arg artifact_overwrite "$5" --arg artifact_if_no_files_found "$6" --arg artifact_retention_days "$7" \
               '. + [{"name": $name, "command": $cmd, "artifact-name": $artifact_name, "artifact-path": $artifact_path, "artifact-overwrite": $artifact_overwrite, "artifact-if-no-files-found": $artifact_if_no_files_found, "artifact-retention-days": $artifact_retention_days}]')
           }
-          if [[ -n "${{ inputs.build-command }}" ]]; then
-            jq_add_step "Build" "${{ inputs.build-command }}" "${{ inputs.build-artifact-name }}" "${{ inputs.build-artifact-path }}" \
-              "${{ inputs.build-artifact-overwrite }}" "${{ inputs.build-if-no-files-found }}" "${{ inputs.build-retention-days }}"
+          if [[ -n "${{ inputs.test-command }}" ]]; then
+            jq_add_step "Test" "${{ inputs.test-command }}" "${{ inputs.test-artifact-name }}" "${{ inputs.test-artifact-path }}" \
+              "${{ inputs.test-artifact-overwrite }}" "${{ inputs.test-artifact-if-no-files-found }}" "${{ inputs.test-artifact-retention-days }}"
           fi
+
           if [[ -n "${{ inputs.test-unit-command }}" ]]; then
             jq_add_step "Unit Test" "${{ inputs.test-unit-command }}" "${{ inputs.test-unit-artifact-name }}" "${{ inputs.test-unit-artifact-path }}" \
               "${{ inputs.test-unit-artifact-overwrite }}" "${{ inputs.test-unit-if-no-files-found }}" "${{ inputs.test-unit-retention-days }}"
@@ -360,7 +361,7 @@ jobs:
         shell: bash
         run: echo "${{ steps.set_post_matrix.outputs.matrix }}"
 
-      - name: Prepare matrix & metadata
+      - name: Set image metadata and platform matrix
         id: prepare_image
         uses: ./.github/actions/buildx-bake/prepare
         with:
