--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -17,12 +17,29 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: test
-        id: command
-        uses: getdevopspro/github-actions/command@v0.3.9
-        with:
-          command: |
-            docker_image="ghcr.io/${{ github.repository }}:${{ github.event.pull_request.head.sha }}"
-            echo "docker run --rm ${docker_image,,} -- just system-test"
+        id: test
+        shell: bash
+        run: |
+          MATRIX=[]
+          function jq_add_step {
+            MATRIX=$(echo $MATRIX | jq -c --arg name "$1" --arg cmd "$2" \
+              '. + [{"name": $name, "command": $cmd}]')
+          }
+          jq_add_step "Lint" "ls ${command}"
+
+          echo "matrix=$MATRIX" >>"${GITHUB_OUTPUT}"
+
+      - name: show matrix
+        run: |
+          echo "MATRIX: ${{ steps.test.outputs.matrix }}"
+          echo "MATRIX JSON: ${{ toJson(steps.test.outputs.matrix) }}"
+      # - name: test
+      #   id: command
+      #   uses: getdevopspro/github-actions/command@v0.3.9
+      #   with:
+      #     command: |
+      #       docker_image="ghcr.io/${{ github.repository }}:${{ github.event.pull_request.head.sha }}"
+      #       echo "docker run --rm $$${docker_image,,} -- just system-test"
   # pr-build:
   #   uses: ./.github/workflows/pull-request-callable.yml
   #   name: PR
